--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           commit_message: 'pylint: auto fixes'
           commit_options: '--no-verify'
-          repository: .
-          commit_user_name: sandy1709
-          commit_user_email: 58665444+sandy1709@users.noreply.github.com
-          commit_author: sandy1709 <58665444+sandy1709@users.noreply.github.com>
+          repository: 
+          commit_user_name: Laddu
+          commit_user_email: 58665444+laddu@users.noreply.github.com
+          commit_author: sandy1709 <58665444+laddu@users.noreply.github.com>
